# CodexOverlay

./: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  tray.rs
src-tauri/src/codex/: client.rs  mod.rs  normalize.rs  process.rs  protocol.rs
src-tauri/src/window/: placement.rs
src/components/: ConnectionIndicator.tsx  DetailsView.tsx  OverlayBar.tsx  OverlaySettings.tsx  PlacementControls.tsx  QuotaMeter.tsx
src/lib/: formatting.test.ts  formatting.ts  tauri.ts
src/state/: usageStore.ts
src/styles/: global.css  overlay.css
src/types/: usage.ts
