[package]
name = "codex-usage-overlay"
version = "0.1.0"
description = "A click-through Codex usage overlay"
authors = ["Codex Usage Overlay"]
edition = "2021"

[lib]
name = "codex_usage_overlay_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["io-util", "process", "sync", "time", "rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-sys = { version = "0.59", features = ["Win32_System_Threading"] }

[dev-dependencies]
tempfile = "3"
